fix: bootstrap styling overlapped

--- a/src/Components/MainNavbar/MainNavbar.module.scss
+++ b/src/Components/MainNavbar/MainNavbar.module.scss
@@ -60,8 +60,8 @@
             background: #ffffff4f;
         }
     }
-    a{
-        color: #fff;
+    a{ 
+        color: #fff !important;
         font-size: 1rem;
     }
 }
