--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,16 @@
   margin: 0;
 }
 
+ul{
+  padding-left: 0;
+}
+a{
+  color: #fff;
+}
+p{
+  margin: 0;
+}
+
 html,
 body {
   max-width: 100vw;
